`get_frame`: `vector<BYTE>` -> `BYTE*`
Also added extern C `get_output_data`

--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,4 @@ FakesAssemblies/
 # Visual Studio 6 workspace options file
 *.opt
 DXGI_capture_lib/capture.bmp
+DXGI_capture_lib/~AutoRecover.DXGI_capture_lib.vcxproj
