Add frame timeout

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,7 @@ FakesAssemblies/
 DXGI_capture_lib/capture.bmp
 DXGI_capture_lib/~AutoRecover.DXGI_capture_lib.vcxproj
 DXGCap/capture.bmp
+DXGCap/build.bat
+DXGCap/DXGCap.dll
+*.exp
+*.lib
